--- a/index.html
+++ b/index.html
@@ -1,27 +1,20 @@
+
 <!DOCTYPE html>
 <html lang="en">
-	<meta charset="UTF-8">
-	<!--EL ORDEN IMPORTA EN CSS // GRILLA/COMMON, STYLE , MEDIA-->
-	<!--CSS common-->
-	<link rel="stylesheet" type="text/css" href="css/common.css">
-	<!--CSS style-->
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<!--CSS media-->
-	<link rel="stylesheet" type="text/css" href="css/media.css">
-	<!--tipografia-->
-	<title>Gatito</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximun-scale=1">
+    <title>Kitten</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/media.css">
 </head>
 <body>
-	<div class="container">
-		<div class="imagen">
-		<style>img {display: block; margin: 0 auto;}</style>
-
-		<picture>
-			<source media="(min-width: 650px)" srcset="asset/img/gato1.png">
-			<source media="(min-width: 465px)" srcset="asset/img/gato2.png">
-			<img src="asset/img/gato3.png" alt="a cute kitten">
-		</picture>
-		</div>
-	</div>
+    <section>
+        <picture>
+            <source media="(max-width:400px)" srcset="asset/img/gato3.png">  
+            <source media="(max-width:800px)" srcset="asset/img/gato2.png">
+            <img src="asset/img/gato1.png" alt="kitten">
+        </picture>
+    </section>
 </body>
 </html>
